# databricks-country-pipeline

./: .coverage  .gitignore  CHANGELOG.md  Makefile  README.md  databricks.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: databricks-dev.agent.md
.github/workflows/: ci.yml  deploy.yml
fixtures/: sample_countries.json
notebooks/: pipeline_demo.py
resources/: atlas_stream_etl.pipeline.yml  atlas_stream_job.job.yml
src/: sample_notebook.ipynb
src/atlas_stream/: main.py
src/atlas_stream/etl/: bronze_to_silver.py  ingest.py  schema.py  silver_to_gold.py  verify.py
src/atlas_stream_etl/: README.md
src/atlas_stream_etl/transformations/: sample_trips_atlas_stream.py  sample_zones_atlas_stream.py
tests/: conftest.py  sample_taxis_test.py  test_countries_etl.py
